--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #fff
 }
 
 .navbar {
@@ -34,32 +35,74 @@ body {
   text-decoration: "none";
   color: "white";
 }
-.imageCard { 
-  height: auto; 
-  display: flex; 
-  justify-content: space-around; 
-} 
-.imageCard input[type=image]{ 
-  vertical-align: middle;   
-}
 
-.footer{
-  width: 100%;
-  height: 50vh;
-  background-color: black;
-  color: white;
+.home-content {
+  position: relative;
+  text-align: center;
   display: flex;
-  /* align-items: center; */
-  justify-content: center;
-  
 }
 
+.content {
+  top: 30%;
+  left: 30%;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  color: #27AE60;
+}
 
-.imageCard img { 
-  height: 300px; 
-  width: 300px; 
+.content h3{
+  text-decoration: underline;
+}
+.image-card { 
+  width: 100%;
+  
+  /* height: auto;  */
+  /* display: flex;  */
+  /* justify-content: space-around;  */
 } 
-.imgContainer {
+/* .imageCard input[type=image]{ 
+  vertical-align: middle;   
+} */
+
+.image-card img { 
+   width: inherit; 
+  object-fit: cover;
+} 
+
+.logo {
+  position: absolute;
+}
+
+.logo img {
+  height: 50%;
+  width: 50%;
+}
+
+/* .footer {
+  position: relative;
+  text-align: center;
+  display: flex;
+}
+
+.footer-content {
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+} */
+
+.contact-img {
+  height: 30px;
+  width: 30px;
+
+}
+
+.email {
+  height: 30px;
+  width: 30px;
+}
+
+/* .imgContainer {
   padding-top: 12px;
   box-sizing: border-box;
   border: 1px solid whitesmoke;
@@ -72,7 +115,18 @@ body {
   -ms-transform: scale(1.1);
   -webkit-transform: scale(1.3.1);
   box-shadow: 2px 2px 2px #4b4b4b;
-}
+} */ */
+
+/* .footer{
+  width: 100%;
+  height: 50vh;
+   background-color: black; 
+  color: white;
+  display: flex;
+   align-items: center; 
+  justify-content: center; 
+}  */
+
 .form {
   height: 500px;
   background-color: burlywood;
