--- a/src/components/App.css
+++ b/src/components/App.css
@@ -19,7 +19,7 @@ body {
   align-content: center;
   display: flex;
   justify-content: space-around;
-  background-color: #171321;
+  background-color: whitesmoke;
   width: 100%;
   height: 50px;
   align-items: center;
@@ -115,10 +115,21 @@ body {
   -ms-transform: scale(1.1);
   -webkit-transform: scale(1.3.1);
   box-shadow: 2px 2px 2px #4b4b4b;
+} */ */
+
+/* .footer{
+  width: 100%;
+  height: 50vh;
+   background-color: black; 
+  color: white;
+  display: flex;
+   align-items: center; 
+  justify-content: center; 
+}  */
 
 .form {
   height: 500px;
-  background-color: #171321;
+  background-color: burlywood;
   width: 500px;
   margin: auto;
   align-items: center;
@@ -130,7 +141,6 @@ body {
 }
 .input {
   padding: 12px;
-  background-color: #27AE60;
   margin: 22px;
 }
 .notes {
@@ -154,7 +164,7 @@ body {
 .resultsCard{
   height: 500px;
   word-spacing: 10px;
-  background-color: #171321;
+  background-color: yellowgreen;
   width: 500px;
   margin: auto;
   align-items: center;
