switch from ft-user-login-1

--- a/src/styles/Loginform.css
+++ b/src/styles/Loginform.css
@@ -20,7 +20,7 @@
 }
 
 .cover {
-    background-color: white;
+    background-color: #ffffff;
     width: 70%;
     height: 50%;
     position: relative;
