--- a/src/components/App.css
+++ b/src/components/App.css
@@ -115,7 +115,7 @@ body {
   -ms-transform: scale(1.1);
   -webkit-transform: scale(1.3.1);
   box-shadow: 2px 2px 2px #4b4b4b;
-} */ */
+} */ 
 
 /* .footer{
   width: 100%;
@@ -127,22 +127,6 @@ body {
   justify-content: center; 
 }  */
 
-.form {
-  height: 500px;
-  background-color: burlywood;
-  width: 500px;
-  margin: auto;
-  align-items: center;
-  display: flex;
-  margin-top: 40px;
-  flex-direction: column;
-  padding-top: 20px;
-  border-radius: 12px;
-}
-.input {
-  padding: 12px;
-  margin: 22px;
-}
 .notes {
   display: flex;
   flex-direction: column;
