--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Poppins&display=swap');
+
 .App {
   text-align: center;
-  
+  font-family: 'Comic Neue', cursive;
 }
 
 body { 
@@ -12,28 +14,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #fff
-}
-
-.navbar {
-  padding-top: 12px;
-  align-content: center;
-  display: flex;
-  justify-content: space-around;
-  background-color: whitesmoke;
-  width: 100%;
-  height: 50px;
-  align-items: center;
-}
-.navlinks {
-  width: "150px";
-  height: "30px";
-  padding-top: "2px";
-  padding: "2px";
-  align-items: "center";
-  margin: "0 6px 6px";
-  background: "blue";
-  text-decoration: "none";
-  color: "white";
 }
 
 .home-content {
@@ -54,16 +34,6 @@ body {
 .content h3{
   text-decoration: underline;
 }
-.image-card { 
-  width: 100%;
-  
-  /* height: auto;  */
-  /* display: flex;  */
-  /* justify-content: space-around;  */
-} 
-/* .imageCard input[type=image]{ 
-  vertical-align: middle;   
-} */
 
 .image-card img { 
    width: inherit; 
@@ -79,18 +49,6 @@ body {
   width: 50%;
 }
 
-/* .footer {
-  position: relative;
-  text-align: center;
-  display: flex;
-}
-
-.footer-content {
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-} */
-
 .contact-img {
   height: 30px;
   width: 30px;
@@ -102,75 +60,20 @@ body {
   width: 30px;
 }
 
-/* .imgContainer {
-  padding-top: 12px;
-  box-sizing: border-box;
-  border: 1px solid whitesmoke;
-  width: 300px;
-  box-shadow: 4px 2px grey;
-  cursor: pointer;
-}
-.imgContainer:hover {
-  transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -webkit-transform: scale(1.3.1);
-  box-shadow: 2px 2px 2px #4b4b4b;
-} */ */
-
-/* .footer{
-  width: 100%;
-  height: 50vh;
-   background-color: black; 
-  color: white;
-  display: flex;
-   align-items: center; 
-  justify-content: center; 
-}  */
-
 .form {
-  height: 500px;
-  background-color: burlywood;
-  width: 500px;
-  margin: auto;
-  align-items: center;
-  display: flex;
-  margin-top: 40px;
-  flex-direction: column;
-  padding-top: 20px;
-  border-radius: 12px;
+    background-color: #171321;
+    box-shadow: 1px 2px 3px #27AE60;
+    width: 500px;
+    margin: auto;
+    align-items: center;
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    padding-top: 20px;
+    border-radius: 12px;
 }
 .input {
   padding: 12px;
+  border-radius: 10px;
   margin: 22px;
-}
-.notes {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  width: 40%;
-  padding: 10px;
-}
-#note{
-  margin-top: 20px;
-  padding-bottom: 100px;
-}
-.formInput{
-  margin-bottom: 10px;
-  padding: 10px;
-}
-.text{
-  margin-top: 50px;
-}
-.resultsCard{
-  height: 500px;
-  word-spacing: 10px;
-  background-color: yellowgreen;
-  width: 500px;
-  margin: auto;
-  align-items: center;
-  display: flex;
-  margin-top: 40px;
-  flex-direction: column;
-  padding-top: 20px;
-  border-radius: 12px;
 }
