--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&family=Poppins&display=swap");
 
 .App {
   text-align: center;
-  font-family: 'Comic Neue', cursive;
+  font-family: "Comic Neue", cursive;
 }
 
-body { 
+body {
   background-color: #171321;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #fff
+  color: #fff;
 }
 
 .home-content {
@@ -28,17 +28,17 @@ body {
   position: absolute;
   justify-content: center;
   align-items: center;
-  color: #27AE60;
+  color: #27ae60;
 }
 
-.content h3{
+.content h3 {
   text-decoration: underline;
 }
 
-.image-card img { 
-   width: inherit; 
+.image-card img {
+  width: inherit;
   object-fit: cover;
-} 
+}
 
 .logo {
   position: absolute;
@@ -52,7 +52,6 @@ body {
 .contact-img {
   height: 30px;
   width: 30px;
-
 }
 
 .email {
@@ -60,20 +59,38 @@ body {
   width: 30px;
 }
 
-.form {
-    background-color: #171321;
-    box-shadow: 1px 2px 3px #27AE60;
-    width: 500px;
-    margin: auto;
-    align-items: center;
-    display: flex;
-    margin-top: 40px;
-    flex-direction: column;
-    padding-top: 20px;
-    border-radius: 12px;
+.image-card {
+  width: 100%;
 }
-.input {
+
+.login-form {
+  background-color: #171321;
+  box-shadow: 1px 2px 3px #27ae60;
+  width: 500px;
+  margin: auto;
+  align-items: center;
+  display: flex;
+  margin-top: 40px;
+  flex-direction: column;
+  padding-top: 20px;
+  border-radius: 12px;
+}
+.login-form input {
   padding: 12px;
   border-radius: 10px;
   margin: 22px;
+  color: #171321;
+}
+
+.login-form button {
+  color: #ffffff;
+  background-color: orange;
+  padding: 8px;
+  border-radius: 10px;
+  margin-bottom: 3%;
+}
+
+.login-form button:hover{
+    transition: ease-in-out .4s;
+    background-color: #27ae60;
 }
